--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ aria2p
 hachoir
 Pillow
 pySmartDL
-https://github.com/pyrogram/pyrogram/archive/asyncio-dev.zip
+https://github.com/cyrus-op/pyrogram/archive/asyncio.zip
 tgcrypto
-git+https://github.com/FaArIsH/youtube-dl
+git+https://github.com/cyrus-op/ytdl
